[metadata]
name = "wcs"
version= 0.0.6
description= "wcs tools for colab and co"
url = "git@github.com/snowdd1/wcs.git"
author = "Raoul"
author_email= "snowdd1.theelk@xoxy.net"
license = "MIT2.0"

[options]
packages = find:
install_requires =
  pandas >= 1.1
  numpy >= 1.18
  sklearn
  IPython
python_requires >= "3.6"